<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2023 KDW03

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="home">Home</string>
    <string name="home_loading">Loading for home…</string>
    <string name="navigate_up">Navigate up</string>
    <string name="empty_description">상대의 설명을 입력해주세요!</string>
    <string name="no_story">No Story...</string>
    <string name="new_story">New Story!</string>
    <string name="no_story2">오늘의 스토리를 작성해주세요:)</string>
</resources>



