<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2023 KDW03

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Mineme</string>
    <string name="not_connected">네트워크에 연결되지 않았습니다</string>
    <string name="kakao_signup">카카오 계정으로 시작</string>
</resources>