<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2023 KDW03

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="story">Story</string>
    <string name="calendar_loading">Loading for calendarStory…</string>
    <string name="region_loading">Loading for regionStory…</string>
    <string name="writeStory">스토리 작성</string>
    <string name="choosePicture">사진 고르기</string>
    <string name="next_writeStory">스토리 작성하기</string>
    <string name="day_pick_title">언제였나요?</string>
    <string name="region_city_pick_title">어디였나요?</string>
    <string name="story_content_placeholder">무슨 이야기를 남기고 싶나요?</string>
    <string name="detail_story_loading">detail story Loading…</string>
    <string name="access_media_location">사진 위치 정보를 자동으로 표시하기 위해 권한이 필요합니다.</string>
</resources>