<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2023 KDW03

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="settings">Settings</string>
    <string name="Account">계정</string>
    <string name="notification">알림</string>
    <string name="security">보안</string>
    <string name="announcement">공지사항</string>
    <string name="contact">문의하기</string>
    <string name="theme">테마</string>
    <string name="account_loading">Loading for account…</string>
    <string name="dynamic_color_preference">동적 색상 적용</string>
    <string name="top_app_bar_action_icon_description">Settings</string>
    <string name="top_app_bar_navigation_icon_description">Search</string>
    <string name="settings_title">Settings</string>
    <string name="loading">Loading…</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="licenses">Licenses</string>
    <string name="brand_guidelines">Brand Guidelines</string>
    <string name="feedback">Feedback</string>
    <string name="dark_mode_preference">Dark mode preference</string>
    <string name="dark_mode_config_system_default">System default</string>
    <string name="dark_mode_config_light">Light</string>
    <string name="dark_mode_config_dark">Dark</string>
    <string name="dynamic_color_yes">Yes</string>
    <string name="dynamic_color_no">No</string>
    <string name="dismiss_dialog_button_text">OK</string>
</resources>